--- a/styles.css
+++ b/styles.css
@@ -4,32 +4,41 @@
     margin: 0;
 }
 
-main {
-    max-width: 1440px;
+body {
+    height: 100vh;
     background-color: #f7fdfc;
 }
 
 .main-container {
+    max-width: 1440px;
+    height: 100%;
+    margin: 0 auto;
     display: flex;
-    flex-direction: row;
+    justify-content: center;
     gap: 120px;
-    padding: 81px 140px 80px;
+    padding: 81px 24px 80px;
 }
 
 
 .logo-container {
-    max-width: 460px;
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
     margin-top: 124px;
-    margin-bottom: auto;
 }
 
 .logo {
-    max-width: 77.33px;
-    margin-bottom: 50px;
+    width: 77.33px;
+    height: 80px;
+    margin-bottom: 30px;
+}
+
+.logo img {
+    width: 100%;
+    height: 100%;
 }
 
 .container-heading {
-    margin-bottom: 20px;
     font-family: Brown;
     font-size: 40px;
     font-weight: 700;
@@ -39,6 +48,7 @@ main {
 }
 
 .logo-container p {
+    max-width: 460px;
     font-family: Brown;
     font-size: 16px;
     font-weight: 400;
@@ -46,16 +56,31 @@ main {
     color: #737373;
 }
 
+.logo-container p:last-child {
+    display: none;
+}
+
+.form-section {
+    display: grid;
+    gap: 24px;
+    max-width: 580px;
+    width: 100%;
+}
+
 .form-container {
     padding: 40px;
-    max-width: 580px;
+    width: 100%;
     background-color: #FFFFFF;
     border-radius: 6px;
+    display: flex;
+    flex-direction: column;
+    gap: 24px;
+    box-shadow: 0px 4px 50px 0px #0408131a;
 }
 
 .grid-container {
     display: grid;
-    grid-template-columns: auto auto;
+    grid-template-columns: repeat(auto-fill, minmax(238px, 1fr));
     gap: 24px;
 }
 
@@ -63,7 +88,6 @@ main {
     display: flex;
     flex-direction: column;
     gap: 8px;
-    padding-bottom: 30px;
 }
 
 label {
@@ -75,11 +99,7 @@ label {
     color: #011C34;
 }
 
-.password {
-    width: 100%;
-}
-
-.dob {
+.password, .dob {
     width: 100%;
 }
 
@@ -106,6 +126,7 @@ label {
     letter-spacing: 0.2px;
     color: #FFFFFF;
     background-color: #2EC4B6;
+    border: unset;
 }
 
 footer {
@@ -113,6 +134,8 @@ footer {
     font-size: 14px;
     font-weight: 400;
     line-height: 25px;
+    padding-left: 18px;
+    padding-right: 19px;
 }
 
 span {
@@ -123,6 +146,10 @@ span {
     color: #2EC4B6;
     text-decoration-line: underline;
     text-decoration-style: solid;
+}
+
+.bottom-footer {
+    display: none;
 }
 
 input, select, button {
@@ -146,28 +173,51 @@ input, select, button {
 
 }
 
-footer {
-    padding-left: 18px;
-    padding-right: 19px;
-}
-
-/* select option:disabled {
-    font-family: Sofia Pro;
-    font-size: 14px;
-    font-weight: 300;
-    line-height: 20px;
-    letter-spacing: 0.20000000298023224px;
-    padding-left: 16px;
-    padding-top: 14px;
-    padding-bottom: 14px;
-} */
-
-@media only screen and (max-width: 375px) {
+@media only screen and (max-width: 376px) {
     .main-container {
-        flex-direction: column;
-    }
+        padding: 30px 24px;
+      }
+    
+      .logo {
+        width: 39px;
+        height: 40px;
+        margin-bottom: 28px;
+      }
+    
+      .container-heading {
+        font-size: 30px;
+      }
+    
+      .logo-container {
+        gap: 12px;
+        margin-top: 0px;
+      }
+    
+      .logo-container p {
+        display: none;
+      }
+    
+      .logo-container p:last-child {
+        display: block;
+      }
 
-    .grid-container {
-        grid-template-rows: auto auto;
+      .top-footer {
+        display: none;
+      }
+
+      .bottom-footer {
+        display: block;
+      }
     }
-}
+    
+    @media only screen and (min-width: 375px) and (max-width: 980px) {
+      .main-container {
+        gap: 40px;
+        flex-wrap: wrap;
+        padding: 40px 24px;
+      }
+    
+      .logo-container {
+        margin-top: 0px;
+      }
+    }
